// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar correctly renders correct snapshot 1`] = `
<div
  className="SideBar-sideBar-2"
>
  <WithStyles(ForwardRef(List))
    className="SideBar-itemList-1"
  >
    <InfoGroup
      classes={
        Object {
          "itemList": "SideBar-itemList-1",
          "projectTitleLI": "SideBar-projectTitleLI-3",
          "projectTitleLIT": "SideBar-projectTitleLIT-4",
          "sideBar": "SideBar-sideBar-2",
        }
      }
      projectKey="project99"
    />
    <AnalysisGroup
      projectKey="project99"
      userPermissions={
        Array [
          "projects:project99:storage:list",
          "projects:project99:stacks:list",
          "projects:project99:settings:list",
        ]
      }
    />
    <MiscGroup
      projectKey="project99"
      userPermissions={
        Array [
          "projects:project99:storage:list",
          "projects:project99:stacks:list",
          "projects:project99:settings:list",
        ]
      }
    />
  </WithStyles(ForwardRef(List))>
</div>
`;

exports[`Sidebar correctly renders correct snapshot 2`] = `
<div
  className="SideBarAnalysis-sideBar-6"
>
  <WithStyles(ForwardRef(List))
    className="SideBarAnalysis-itemList-5"
  >
    <AnalysisGroup
      projectKey="project99"
      userPermissions={
        Array [
          "projects:project99:storage:list",
          "projects:project99:stacks:list",
          "projects:project99:settings:list",
        ]
      }
    />
    <MiscGroup
      projectKey="project99"
      userPermissions={
        Array [
          "projects:project99:storage:list",
          "projects:project99:stacks:list",
          "projects:project99:settings:list",
        ]
      }
    />
  </WithStyles(ForwardRef(List))>
</div>
`;
